tests/invalid/type/proto_const_field_missing_init.pts
prototype P {
    const int year;
}

function main() : void {}
